// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bundle() 1`] = `
Object {
  "content": "(function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\"function\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\"Cannot find module '\\"+o+\\"'\\");throw f.code=\\"MODULE_NOT_FOUND\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\"function\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s})({},{},[]);
",
  "hash": "e867367ae217ade7ab1acf25afbb04cf3f3ad88cba5022e3c63a328db2124194",
}
`;

exports[`bundleIfNeeded() - does not need to produce bundle 1`] = `
SinkMem {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "db": Object {
    "a-hash1.json": "[{\\"id\\":\\"c645cf572a8f5acf8716e4846b408d3b1ca45c58\\",\\"source\\":\\"\\\\\\"use strict\\\\\\";module.exports.world=function(){return\\\\\\"world\\\\\\"};\\",\\"deps\\":{},\\"file\\":\\"./assets/js/bar.js\\"}]",
    "b-hash2.json": "[{\\"id\\":\\"b645cf572a8f5acf8716e4846b408d3b1ca45c58\\",\\"source\\":\\"\\\\\\"use strict\\\\\\";module.exports.world=function(){return\\\\\\"world\\\\\\"};\\",\\"deps\\":{},\\"file\\":\\"./assets/js/foo.js\\"}]",
    "c-hash3.json": "[{\\"id\\":\\"a645cf572a8f5acf8716e4846b408d3b1ca45c58\\",\\"source\\":\\"\\\\\\"use strict\\\\\\";module.exports.world=function(){return\\\\\\"world\\\\\\"};\\",\\"deps\\":{},\\"file\\":\\"./assets/js/baz.js\\"}]",
    "e867367ae217ade7ab1acf25afbb04cf3f3ad88cba5022e3c63a328db2124194.js": "content was not replaced",
    "meta/tags.json": "{\\"a/js\\":\\"hash1\\",\\"b/js\\":\\"hash2\\",\\"c/js\\":\\"hash3\\"}",
  },
  "domain": null,
  "name": "asset-pipe-sink-mem",
}
`;

exports[`bundleIfNeeded() - produces new bundle 1`] = `
SinkMem {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "db": Object {
    "e867367ae217ade7ab1acf25afbb04cf3f3ad88cba5022e3c63a328db2124194.js": "\\"(function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require==\\\\\\"function\\\\\\"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error(\\\\\\"Cannot find module '\\\\\\"+o+\\\\\\"'\\\\\\");throw f.code=\\\\\\"MODULE_NOT_FOUND\\\\\\",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require==\\\\\\"function\\\\\\"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s})({},{},[]);\\\\n\\"",
    "hash1.json": "[{\\"id\\":\\"c645cf572a8f5acf8716e4846b408d3b1ca45c58\\",\\"source\\":\\"\\\\\\"use strict\\\\\\";module.exports.world=function(){return\\\\\\"world\\\\\\"};\\",\\"deps\\":{},\\"file\\":\\"./assets/js/bar.js\\"}]",
    "hash2.json": "[{\\"id\\":\\"b645cf572a8f5acf8716e4846b408d3b1ca45c58\\",\\"source\\":\\"\\\\\\"use strict\\\\\\";module.exports.world=function(){return\\\\\\"world\\\\\\"};\\",\\"deps\\":{},\\"file\\":\\"./assets/js/foo.js\\"}]",
    "hash3.json": "[{\\"id\\":\\"a645cf572a8f5acf8716e4846b408d3b1ca45c58\\",\\"source\\":\\"\\\\\\"use strict\\\\\\";module.exports.world=function(){return\\\\\\"world\\\\\\"};\\",\\"deps\\":{},\\"file\\":\\"./assets/js/baz.js\\"}]",
    "meta/tags.json": "{\\"a/js\\":\\"hash1\\",\\"b/js\\":\\"hash2\\",\\"c/js\\":\\"hash3\\"}",
  },
  "domain": null,
  "name": "asset-pipe-sink-mem",
}
`;

exports[`publishAssets() - invalid schema given 1`] = `
[ValidationError: Invalid 'assets' object given when attempting to publish assets. {
  [41m"tag"[0m[31m [1]: -- missing --[0m
}
[31m
[1] "asset tag" is required[0m]
`;

exports[`publishInstructions() - invalid schema given 1`] = `
[ValidationError: Invalid 'instruction' object given when attempting to publish instructions. {
  [41m"tag"[0m[31m [1]: -- missing --[0m
}
[31m
[1] "asset tag" is required[0m]
`;
